--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-# python
-__pycache__
-.venv
+# Python
+__pycache__/
+.venv/
 *.pyc
 
-#Docker
+# Docker
 volumes/
 
-#Pycharm project file
-.idea
+# Pycharm project file
+.idea/
