Show stock value
Signed-off-by: Vincent Bisserie <vbisserie@gmail.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,19 @@
-.venv
-volumes
+.git/
+.idea/
+.venv/
+volumes/
 .gitignore
+api.env
+db.env
 docker-compose.yaml
+docker-compose.yaml.prod
 Dockerfile
+LICENSE
+poetry.lock
+pyproject.toml
+README.md
+
+client/node_modules/
+client/dist/
+client/.gitignore
+client/README.md
