Use poetry / Use gunicorn directly / Use Odoo for products fetch
Signed-off-by: Vincent Bisserie <vbisserie@gmail.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,14 +3,13 @@
 .venv/
 volumes/
 .gitignore
+.pre-commit-config.yaml
 api.env
 db.env
 docker-compose.yaml
 docker-compose.yaml.prod
 Dockerfile
 LICENSE
-poetry.lock
-pyproject.toml
 README.md
 
 client/node_modules/
