--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,10 @@ name = "inventory-coop"
 version = "0.1.0"
 description = "Backend for inventory process in La Chouette Coop"
 authors = ["Vincent Bisserie <vbisserie@gmail.com>"]
+packages = [
+    { include = "main.py" },
+    { include = "api" },
+]
 license = "MIT"
 
 [tool.poetry.dependencies]
@@ -19,6 +23,16 @@ httpx = "^0.16.1"
 black = "^20.8b1"
 pre-commit = "^2.9.3"
 
+[tool.poetry.scripts]
+inventory-coop = 'main:main'
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.black]
+line-length = 100
+
+[tool.isort]
+profile = "black"
+line_length = 100
