--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-ldap = "^3.3.1"
 Werkzeug = "^0.16.1"
 aio-odoorpc-base = "^3.0.4"
 httpx = "^0.16.1"
+Flask-socketio = "^v4.3.2"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
@@ -26,13 +27,12 @@ pre-commit = "^2.9.3"
 [tool.poetry.scripts]
 inventory-coop = 'main:main'
 
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
-
 [tool.black]
 line-length = 100
 
 [tool.isort]
 profile = "black"
 line_length = 100
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
