--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,12 @@ python = "^3.8"
 eve = "^1.1.4"
 gunicorn = "^20.0.4"
 pyjwt = "^2.0.0"
+pymongo = "^3.12.1"
 python-ldap = "^3.3.1"
 Werkzeug = "^0.16.1"
 aio-odoorpc-base = "^3.0.4"
 httpx = "^0.16.1"
-Flask-socketio = "^v4.3.2"
+flask-socketio = "v4.3.2"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
