--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,18 +10,18 @@ packages = [
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-eve = "^1.1.4"
-pyjwt = "^2.0.0"
-pymongo = "^3.12.1"
+python = "^3.9"
+eve = "^1.1.5"
+pymongo = "^3.12.3"
+pyjwt = "^2.3.0"
 python-ldap = "^3.3.1"
 Werkzeug = "^0.16.1"
 aio-odoorpc-base = "^3.0.4"
-httpx = "^0.16.1"
+httpx = "^0.22.0"
 flask-socketio = "v4.3.2"
+itsdangerous= "2.0.1"
 
 [tool.poetry.dev-dependencies]
-black = "^20.8b1"
 pre-commit = "^2.9.3"
 
 [tool.poetry.scripts]
@@ -33,6 +33,7 @@ line-length = 100
 [tool.isort]
 profile = "black"
 line_length = 100
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
