--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ aio-odoorpc-base = "^3.0.4"
 httpx = "^0.22.0"
 flask-socketio = "v4.3.2"
 itsdangerous= "2.0.1"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.9.3"
